<?xml version="1.0"?>
<package>
  <name>baselib_binding</name>
  <version>1.0.0</version>
  <description>
    Includes headers to provide loose coupling to
    core functionalities such as threads and shared pointers:
    can switch between std c++11 threads/shared pointers
    or boost.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/baselib_binding</url> -->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
