<?xml version="1.0"?>
<package>
  <name>convenience_math_functions</name>
  <version>1.0.0</version>
  <description>Provides a few convenience math functions
      using the Eigen libraries.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jennifer.e.buehler@gmail.com">Jennifer Buehler</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!--url type="website">URL</url-->

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <!--build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
